# test_modern_periodic_thread

./: CMakeLists.txt  bitmask.h  bits.h  flags.h  main.cpp  my_clock.h  periodic_thread.h  test1.cpp  test_flags.cpp  tracer.h
test/: CMakeLists.txt
